# straattaal

./: .gitignore  .lefthook.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
artefacts/: history.txt  model.pth  tokenizer.json
backend/: app.py  requirements.txt  utils.py
frontend/templates/: index.html
notebooks/: demo.ipynb
src/slanggen/: custom_logger.py  datatools.py  main.py  models.py
