[project]
name = "slanggen"
version = "0.1.0"
description = "generate slang"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "loguru",
    "numpy",
    "tokenizers",
    "torch",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
scrape = [
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slanggen"]
