[project]
name = "slanggen"
version = "0.3.1"
description = "generate slang"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "loguru>=0.7.2",
    "numpy",
    "tokenizers>=0.19.1",
    "torch>=2.0",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
scrape = [
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
]

[[tool.rye.sources]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slanggen"]
